<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">二维码名片</string>
    <string name="name_format">姓名： %s</string>
    <string name="phone_format">电话号码： %s</string>
    <string name="company_format">单位： %s</string>
    <string name="title_activity_login">登录</string>

    <string name="action_settings">settings</string>
    <string name="test_sentence_20">注意这是一个有二十个中文字用于测试的句子</string>
    <string name="test_sentence_100">注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子注意这是一个有二十个中文字用于测试的句子</string>
    <string name="test_type">it\'s a type tip</string>
    <string name="test">测试</string>
    <string name="username">用户名</string>
    <string name="text_name">名字</string>
    <string name="text_phone">手机</string>
    <string name="text_company">公司</string>
    <string name="text_delete">删除</string>
    <string name="text_phonenumber">手机号码</string>
    <string name="text_password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="text_feedback_tips">你可以写下建议或意见，并留下联系方式，我们会做出及时的回复。</string>
    <string name="text_ensure">确定</string>
    <string name="text_cancel">取消</string>
    <string name="text_addcard">添加名片</string>
    //third library
    <string name="folder_all">All Images</string>
    <string name="preview">Preview</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
</resources>
